# lumen

./: .gitignore  Cargo.toml  LUMEN_CLAUDE_CODE_PROMPT.md  README.md  build.sh  package.json  pnpm-lock.yaml
crates/lumen-core/: Cargo.toml
crates/lumen-core/src/: lib.rs
crates/lumen-core/src/consensus/: checkpoint.rs  light_client.rs  mod.rs  sync_committee.rs
crates/lumen-core/src/execution/: account.rs  mod.rs  proof.rs  receipt.rs
crates/lumen-core/src/types/: beacon.rs  execution.rs  mod.rs
crates/lumen-p2p/: Cargo.toml
crates/lumen-p2p/src/: beacon_gossip.rs  behaviour.rs  bootstrap.rs  lib.rs  relay.rs  transport.rs
crates/lumen-wasm/: Cargo.toml
crates/lumen-wasm/src/: beacon_api.rs  lib.rs  network.rs  provider.rs  state.rs
demo/: beacon.ts  index.html  js-sha3.d.ts  lumen-worker.ts  main.ts  package.json  rpc.ts  tsconfig.json  verify.ts  vite.config.ts  wasm.ts
docs/: api.md  architecture.md  trust-model.md
tests/fixtures/: README.md
tests/integration/: README.md
