[workspace]
members = [
    "crates/lumen-core",
    "crates/lumen-wasm",
    "crates/lumen-p2p",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lumen-eth/lumen"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
